stylesheet.css
/* body and background configuration */
body {
	padding: 0;
	margin: 0;
	background-color: snow;
	font-family: 'Noto Sans JP', sans-serif;
	font-size: 1.5rem;
	font-size: 1.5vw;
}

#back-page {
	width: 1100px;
	width: 70%;
	margin: 110px auto 40px;
	margin: 10vw auto 4vw;
	background-color: white;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	border-radius: 10px;
	clear: both;
}

/* anchor configuration */
.rounded-link {
	display: inline-block;
	text-decoration: none;
	color: purple;
	transition: background-color 250ms ease-in, border-radius 250ms ease-in;
	padding: 5px 10px;
	padding: 0.7vw 1.4vw;
	border-radius: 40px;
	border: Indigo 1px solid;
	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
}

.rounded-link:hover {
	background-color: lightgrey;
	border-radius: 20px;
}

/* header and footer configuration */
#header-ul {
	position: relative;
	top: 30%;
}

nav ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

nav ul li {
	background-color: inherit;
	display: inline;
	width: 50%;
	padding: 5px 0;
	margin: 2px 0;
}

nav a:link {
	color: DarkViolet;
	transition: background-color 250ms ease-in, color 250ms ease-in;
	text-decoration: none; style="margin-right: 0;"
	padding: 0 10px;
	padding: 0 1vw;
	border-radius: 5px;
}

nav a:visited {
	color: DarkViolet;
}

nav a:hover {
	color: DarkMagenta;
	background-color: lightgrey;
}

footer {
	background-color: #555555;
	color: #888888;
}

footer nav a:link {
	color: #888888;
	text-decoration: none;
}

footer nav a:visited {
	color: #888888;
}

footer nav a:hover {
	color: #999999;
	background-color: #444444;
}

.social-media {
	width: 50px;
	width: 3vw;
	border-radius: 3px;
	transition: background-color 250ms ease-in;
}

.social-media:hover {
	background-color: lightgrey;
}

.social-media-f {
	width: 32px;
	width: 3vw;
	border-radius: 3px;
	transition: background-color 250ms ease-in;
}

.social-media-f:hover {
	background-color: lightgrey;
}

.hf-margins {
	display: flex;
	flex-direction: row;
	text-align: center;
	width: 1100px;
	width: 70%;
	margin: 0 auto;
	padding: 10px 0;
	padding: 0.5vw 0;
	background-color: inherit;
}

.spacer {
	content: "";
	flex: 1 1;
}

#icon-credit {
	display: block;
	margin: 0 auto;
	text-align: center;
	font-size: 12px;
	font-size: 1.5vw;
}

#icon-credit a {
	color: inherit;
}

/* inner text configuration */
section, article {
	text-align: left;
	padding: 2%;
}

h1, h2 {
	font-family: 'Roboto Mono', monospace;
	font-size: 1.5em;
	color: Indigo;
	margin-top: 0;
}

#introduction {
	display: block;
	text-align: left;
	height: 500px;
	height: 30vw;
}

#introduction p {
	position: relative;
	top: 40%;
	width: 45%;
	text-align: center;
	padding: 0 2vw;
}

#profile-photo {
	float: right;
	width: 45%;
	margin-left: 2%;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	border-radius: 5px;
}

#mission-statement {
	font-style: italic;
	text-align: center;
	width: 80%;
	margin: 0 auto;
}

.logo-line {
	text-align: center;
	font-size: 0;
	margin-bottom: 20px;
	margin-bottom: 2vh;
}

/** timeline sub-section **/
.timeline-title {
	clear: both;
	display: flex;
	flex-direction: row;
}

.timeline-description {
	font-size: 1vw;
	margin-top: 20px;
	margin-top: 1.5vw;
	margin-bottom: 20px;
	margin-bottom: 1.5vw;
}

.timeline-description p {
	width: 80%;
}

.timeline-description h3 {
	margin-bottom: 0;
}

.media-line {
	height: 15vh;
	margin: 5px 10px;
	margin: 0.5vh 1%;
	padding: 5px;
	padding: 0.5%;
	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.3);
	border-radius: 5px;
}

.media-right {
	float: right;
	text-align: center;
	margin: 20px 100px 0 20px;
	margin: 2vw 10vw 0 2vw;
	padding: 5px;
	padding: 0.5vw;
	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.3);
	border-radius: 5px;
}

.media-break {
	width: min-content;
	display: table;
	text-align: center;
	margin-left: 20px;
	margin-left: 2vw;
	margin-bottom: 20px;
	margin-bottom: 2vw;
	padding: 5px;
	padding: 0.5vw;
	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.3);
	border-radius: 5px;
}

.terminal {
	list-style: none;
	margin-left: 0;
	margin-top: 0;
	margin-bottom: 20px;
	margin-bottom: 2vw;
	padding-left: 1em;
	text-indent: -1em;
	font-family: 'Roboto Mono', monospace;
}

.terminal dt {
	font-size: 1.2em;
	font-size: 1.2vw;
	margin-top: 5px;
	margin-top: 0.5vw;
}

.terminal dd {
	font-family: 'Noto Sans JP', sans-serif;
}

.timeline-nav-list {
	list-style-type: none;
	color: Indigo;
	margin: 30px 0 50px;
	margin: 3vw 0 5vw;
	padding-left: 20px;
	padding-left: 2vw;
}

.timeline-nav-link {
	display:block;
	background-color: lavender;
	border-radius: 10px;
	width:100%;
	height:100%;
	text-decoration: none;
}

.timeline-nav {
	background-color: Indigo;
	color: white;
	width: max-content;
	display: table;
	border-radius: 10px 50px 50px 10px;
	padding: 5px 30px 5px 10px;
	padding: 0.5vw 3vw 0.5vw 1vw;
	margin: 10px 0;
	margin: 1vw 0;
	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.6);
	transition: padding 100ms linear;
}

.timeline-nav.widen {
	padding-left: 40px;
	padding-left: 4vw;
}

.timeline-element {
	background-color: Indigo;
	color: white;
	border-radius: 10px 50px 50px 10px;
	padding: 5px 30px 5px 10px;
	padding: 0.5vw 3vw 0.5vw 1vw;
	margin: 2px 0;
	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.6);
}

.timeline-line {
	content: "";
	flex: 1 1;
	border-bottom: 5px solid Indigo;
	border-bottom: 0.5vw solid Indigo;
	margin: auto;
	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.6);
}

.timeline-date {
	background-color: Indigo;
	color: white;
	border-radius: 50px 10px 10px 50px;
	padding: 5px 10px 5px 30px;
	padding: 0.5vw 1vw 0.5vw 3vw;
	margin: auto 0;
	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.6);
}

/* Achievements section */

.round-ul {
	list-style: none;
	padding-left: 0;
}

.round-ul li {
	background-color: Indigo;
	color: white;
	border-radius: 10px 50px 50px 10px;
	padding: 5px 30px 5px 10px;
	padding: 0.5vw 3vw 0.5vw 1vw;
	width: fit-content;
	width: -moz-fit-content;
	display: table;
	margin: 5px 0;
	margin: 0.5vw 0;
	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.6);
}

/* section separators */
.separator {
	display: block;
	clear: both;
	text-align: center;
	position: relative;
	z-index: 1;
	background-color: Indigo;
	margin: 20px 0;
	border-radius: 3px;
	color: white;
	vertical-align: middle;
	min-height: 100px;
}

.block-separator {
	width: 90%;
	margin: 50px auto;
	margin: 1vw auto;
}

.block-separator img {
	width: 100%;
	height: 100%;
}

/* contact */
#contact-list {
	color: Indigo;
	display: flex;
	flex-direction: row;
	margin: 30px 0 10px;
	margin: 3vw 0 1vw;
}

#contact-list span, #location-list span {
	margin: 0 20px;
	margin: 0 2vw;
}

#email-link {
	text-decoration:none;
	color: inherit;
	transition: background-color 250ms ease-in;
}

#email-link:hover {
	background-color: lightgrey;
}

#location-list {
	color: Indigo;
	display: flex;
	flex-direction: row;
	margin: 10px 0 30px;
	margin: 1vw 0 3vw;
}

/* animations */
header {
	position: fixed;
	width: 100%;
	top: 0;
	transform: none;
	transition: transform 500ms linear;
	z-index: 999;
	background-color: white;
	box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.1);
}

header.hide {
	transform: translateY(-110%);
}

.slide-in {
	opacity: 0;
	transform: translateY(100px);
	transition: transform 500ms ease-in, opacity 500ms ease-in;
}

.slide-in.appear {
	opacity: 1;
	transform: none;
}

.fade-in {
	opacity: 0;
	transition: opacity 500ms ease-in;
}

.fade-in.appear {
	opacity: 1;
}

/* styles for smaller devices */

@media screen and (max-width: 800px) {
	.media-break {
		float: right;
	}
}

